<resources>
    <string name="app_name">TO DO</string>
    <string name="lable_new_task">Criar Tarefa</string>
    <string name="label_hint_title">Título</string>
    <string name="label_hint_description">Descrição</string>
    <string name="label_hint_date">Data</string>
    <string name="label_hint_hour">Hora</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_tasks">Tarefas</string>
    <string name="label_description_new_task">Nova tarefa</string>
    <string name="label_edit">Editar</string>
    <string name="label_delete">Deletar</string>
  <string name="task_not_created">Task não criada</string>
  <string name="label_no_tasks_found">Ops! Você não possui\nnenhuma tarefa</string>
</resources>